# my_http

./: .gitignore  Cargo.toml  README.md
src/: connection.rs  file_serving.rs  main.rs  middleware.rs  parser.rs  response.rs  router.rs
src/core/: connection.rs  mod.rs  parser.rs  response.rs  router.rs  tls.rs
src/core/tests/: connection.rs  parser.rs  response.rs
src/handlers/: file_serving.rs  mod.rs
src/handlers/tests/: file_serving.rs
src/http/: cookies.rs  middleware.rs  mod.rs
src/http/middleware/: add_header.rs  auth.rs  logger.rs  mod.rs  session_tracker.rs  set_cookie.rs  timer.rs
src/http/middleware/tests/: middleware.rs
src/http/tests/: cookies.rs
src/pool/: thread_pool.rs
src/pool/tests/: thread_pool.rs
