[package]
name = "my_http"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json                = "1.0.140"
serde                     = "1.0.218"
tokio                     = { version = "1", features = ["full"] }
bytes                     = "1.6"
tracing                   = "0.1"
tracing-subscriber        = { version = "0.3", features = ["fmt", "json", "env-filter", "time"]}
tracing-appender          = "0.2"
async-trait               = "0.1"
crossbeam                 = "0.8.4"
