[package]
name = "my_http"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json                = "1.0.140"
serde                     = {version = "1.0.218", features = ["derive"] }
tokio                     = { version = "1", features = ["full"] }
bytes                     = "1.6"
tracing                   = "0.1"
tracing-subscriber        = { version = "0.3", features = ["fmt", "json", "env-filter", "time"]}
tracing-appender          = "0.2"
async-trait               = "0.1"
crossbeam                 = "0.8.4"
flate2                    = "1.0"
chrono                    = "0.4"
rustls                    = "0.23.28"
tokio-rustls              = "0.25"
rustls-pemfile            = "2.2.0"
uuid                      = { version = "1.17.0", features = ["v4"] }
rcgen                     = "0.14.1"
dotenvy = "0.15.7"
